--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<name>ModerationText</name>
 	<description>Gestion de Servicio Cognitivo de API de Moderacion de Textos</description>
 	<properties>
+		<sonar.organization>josemegun</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<java.version>17</java.version>
 		<maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
